# alien-shooter-lgd-decompiler

./: .gitattributes  .gitignore  LgdDecompiler.spec  README.MD  config.py  implementation_plan_refactor_graph.md  launcher.py  logger.py  main.py  old flags.md  pyproject.toml  stack_out_error.md  test_refiner.md  version.py  version_info.txt  死循环.md  非static局部数组.md
LGC_refiner/: const_rules.py  lgc_refiner.py
common/: binary_utils.py  definitions.py  structures.py
core/: analyzer.py  context.py  parsers.py  pipeline.py
data/decompiler_refiner/: constants_database.json
docs/: lgd_doc_CN.md  lgd_doc_EN.md
generate_LGC/: asm_parser.py  asm_structs.py  ast_builder.py  ast_structs.py  cfg_builder.py  cfg_structs.py  flow_structurer.py  lgc_context.py  lgc_generator.py  lgc_optimizer.py
generate_intermediate/: exporter_csv.py  lgd_decryptor.py  renderer_asm.py  renderer_c.py
refine_data_prepare/: find_constants_usage.py  generate_lgc_from_json.py  prepare_constants_data.py  prepare_extern_data.py
refine_data_prepare/output/: extern_database.json
scripts/refine_data_prepare/: find_constants_usage.py  generate_lgc_from_json.py  prepare_constants_data.py  prepare_extern_data.py
src/lgd_tool/: config.py  logger.py  main.py  version.py
test/: conftest.py  test_utils.py
test/test_asm/: conftest.py  test_asm_util.py  test_tutorial00.py
test/test_asm/data/: test_asm_ret_only_1_expected.csv  test_asm_ret_only_2.lgd  tutorial_00.lgd
test/test_ast/: conftest.py  test_ast_ifdef_recovery.py
test/test_ast/data/: test_stack_in_ifdef.lgd.asm
tests/: conftest.py  pytest.ini  test_utils.py
tests/fixtures/asm_files/: test_loc_unstatic_arr.lgd.asm  test_loc_unstatic_arr.lgd.csv
tests/test_asm/: conftest.py  test_asm_generation.py  test_asm_util.py
tests/test_ast/: test_ast_assignment_parens.py  test_ast_ifdef_recovery.py  test_ast_util.py
tests/test_optimizer/: conftest.py  test_optimizer_util.py  test_unstatic_array.py
tests/test_refiner/: test_const_refiner_rules.py  verify_tutorial_00.py
tests/unit/: __init__.py
tests/utils/: __init__.py  asm_helpers.py  ast_helpers.py  cleanup.py  lgc_helpers.py
(+53 files in other folders)
