# pip install -e .

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lgd_tool"
dynamic = ["version"]
# maybe add dependency later
# dependencies = ["requests>=2.0"]

# configure command line entry point
# just type lgd-decompiler in consle
[project.scripts]
lgd-decompiler = "lgd_tool.main:main"


[tool.setuptools]
# all source code is under src folder
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# find all python package under src folder
where = ["src"]

[tool.setuptools.dynamic]
# find variable __version__ in lgd_tool.version.py
version = {attr = "lgd_tool.version.__version__"}


[tool.pytest.ini_options]
addopts = "-v --tb=short --show-capture=no"
testpaths = ["tests"]
pythonpath = ["src"]